force-app/main/default/objects/Asset/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <externalId>true</externalId>
    <label>DeviceID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>