force-app/main/default/objects/Asset/fields/Last_Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Exception_Date__c</fullName>
    <label>Last Exception Date</label>
    <type>DateTime</type>
</CustomField>