force-app/main/default/objects/Asset/fields/Last_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Exception_Message__c</fullName>
    <label>Last Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>