force-app/main/default/objects/Asset/fields/Measure_1_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Measure_1_Threshold__c</fullName>
    <description>Max value for Measure 1 on this asset before stuff hits the fan.</description>
    <label>Measure 1 Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>